set(EXECUTABLE Elasticity2d)

FILE(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE_FILES})

target_compile_definitions(${EXECUTABLE} PUBLIC
	${GASCOIGNE_DEFINITIONS}
)

target_include_directories(${EXECUTABLE} PUBLIC
	${GASCOIGNE_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(${EXECUTABLE} 
	GascoigneStd
)

configure_file(config.param ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(mesh.inp ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/Results)

set(ALL_CXX_SOURCE_FILES ${ALL_CXX_SOURCE_FILES} ${SOURCE_FILES} PARENT_SCOPE)

